Add link to EnCodingApp.

--- a/wiki/En.wiki
+++ b/wiki/En.wiki
@@ -24,5 +24,6 @@
 
  * [EnCoding Entry] in the development team
  * [EnCodingStyle Coding style] _(syntax standards of php, html, css, js and yaml files)_
+ * [EnCodingApp Improve application] base in framework
  * [EnIdea Ideas] for improve project
  * [EnDoc Documentation] create _(wiki page syntax, page names, translations)_
