--- a/wiki/EnIdea.wiki
+++ b/wiki/EnIdea.wiki
@@ -1,12 +1,12 @@
-#summary Ideas for improve project.
+#summary Ideas for improving the project.
 #labels Lang-En
 #sidebar En
 
-On this page we discuss about new ideas for phpDays. Post your ideas below on page in comments.
+On this page we discuss new ideas for phpDays. Post your ideas below in comments.
 
 === Validator ===
 
-[EnLibDaysValidate Days_Validate] - check variable by criterias and return `true` only if data valid.
+[EnLibDaysValidate Days_Validate] - check a variable by criteria and return `true` only if its value is valid.
 
 {{{
 $age = 21;
@@ -23,11 +23,11 @@ if (Days_Validator::check($mail, 'str: {max: 70}, email, required'))
 }}}
 
 Tasks:
- * simplify criteria format _(good if data passes as string `check($age, 'int: {max: 50, min: 18}')` or similar format)_
+ * simplify a criteria format _(good if data passes as string `check($age, 'int: {max: 50, min: 18}')` or similar format)_
 
 === Event (issue #15) ===
 
-[EnLibDaysEvent Days_Event] - implementation of Observer pattern. Help join many components to one system without changes in any component.
+[EnLibDaysEvent Days_Event] - an implementation of the Observer pattern. Helps join many components to one system without changes in any component.
 
 Days library events:
 {{{
@@ -48,7 +48,7 @@ class Days_User {
 ...
 }}}
 
-Your application events in [EnLibDaysModel models] _(add name of your application before event name)_:
+Your application events are in the [EnLibDaysModel models] _(add the name of your application before an event name)_:
 {{{
 class Myapp_Model_Rss {
   public function import($path) {
@@ -67,7 +67,7 @@ class Myapp_Model_Rss {
 }
 }}}
 
-Now, we have add to site forum with user autorization. We use events in forum.
+Now, we have to add a forum with a user authorization to the site. We use events in the forum.
 {{{
 // general Days event
 Days_Event::add('user.login.success', 'userSuccessLogged');
@@ -87,4 +87,4 @@ See also: [http://docs.kohanaphp.com/general/events Kohana events], [http://devz
 
 === Form ===
 
-[EnLibDaysForm Days_Form] - process html forms. If all data passed correctly - execute form handler.
+[EnLibDaysForm Days_Form] - process html forms. If all data is passed correctly - execute a form handler.
