Small language corrections.

--- a/wiki/EnCodingApp.wiki
+++ b/wiki/EnCodingApp.wiki
@@ -2,7 +2,7 @@
 #labels Lang-En
 #sidebar En
 
-For improve existing base of applications _(located in `apps` directory)_ do this:
- * create new empty project _(in directory `/var/www/`)_
- * checkout from SVN project _(use path to this project, for example: `https://phpdays.googlecode.com/svn/trunk/apps/phpdays.org`)_
- * configure project, but no commit configuration files to SVN
+To improve existing base of applications _(located in `apps` directory)_ do the following:
+ * create a new empty project _(in the `/var/www/` directory)_
+ * checkout the project from SVN _(use the path to this project, for example: `https://phpdays.googlecode.com/svn/trunk/apps/phpdays.org`)_
+ * configure the project, but do not commit configuration files to SVN
