More language corrections.

--- a/wiki/EnCodingApp.wiki
+++ b/wiki/EnCodingApp.wiki
@@ -1,8 +1,8 @@
-#summary Improve application base in framework.
+#summary Improving the application base in the framework.
 #labels Lang-En
 #sidebar En
 
-To improve existing base of applications _(located in `apps` directory)_ do the following:
+To improve the existing base of applications _(located in `apps` directory)_ do the following:
  * create a new empty project _(in the `/var/www/` directory)_
  * checkout the project from SVN _(use the path to this project, for example: `https://phpdays.googlecode.com/svn/trunk/apps/phpdays.org`)_
  * configure the project, but do not commit configuration files to SVN
