Edited wiki page through web user interface.

--- a/wiki/RuLibDaysEvent.wiki
+++ b/wiki/RuLibDaysEvent.wiki
@@ -1,4 +1,4 @@
-#summary ORM для работы с таблицами.
+#summary реализация шаблона проектирования наблюдатель (observer)
 #sidebar RuLib
 
 == Общие сведения ==
