Set language. Set correct link to Days_User class.

--- a/wiki/RuLibDaysEvent.wiki
+++ b/wiki/RuLibDaysEvent.wiki
@@ -1,4 +1,5 @@
 #summary реализация шаблона проектирования наблюдатель (observer)
+#labels Lang-Ru
 #sidebar RuLib
 
 == Общие сведения ==
@@ -23,6 +24,7 @@
 *system.send_content* - событие перед отправкой контента страницы.
 
 === Пример ===
+
 Подписка на событие *system.send_content*
 
 {{{
@@ -35,10 +37,12 @@ function del_whitespace() {
 
 
 == Пользовательские события ==
+
 В своем приложении вы можете определять произвольные события. При этом ответственность за оповещение подписчиков о наступлении пользовательских событий ложиться на приложение. В таких событиях перед названием события указываем префикс приложения.
 
 === Примеры ===
-1) События в классе Days_User фреймворка
+
+1) События в классе [RuLibDaysUser Days_User] фреймворка
 {{{
 class Days_User {
   public function login($username, $password) {
