Edited wiki page through web user interface.

--- a/wiki/RuLibDaysEvent.wiki
+++ b/wiki/RuLibDaysEvent.wiki
@@ -1,10 +1,11 @@
-#summary реализация шаблона проектирования наблюдатель (observer)
+#summary Реализация шаблона проектирования наблюдатель (observer)
 #labels Lang-Ru
 #sidebar RuLib
 
 == Общие сведения ==
 
-Класс [http://code.google.com/p/phpdays/source/browse/trunk/lib/Days/Event.php Days_Event] реализует паттерн Observer, позволяет подписаться(назначить вызов функции) на определенное событие, оповещать(вызывать назначенные функции) при наступлении событий. Подписчиков на одно событие может быть несколько, оповещаются они по порядку подписки. <br>
+Класс [http://code.google.com/p/phpdays/source/browse/trunk/lib/Days/Event.php Days_Event] реализует паттерн Observer, позволяет подписаться (назначить вызов функции) на определенное событие, оповещать (вызывать назначенные функции) при наступлении событий. Подписчиков на одно событие может быть несколько, оповещаются они по порядку подписки.
+
 События бывают системными и пользовательскими.
 
 == Системные события ==
