Edited wiki page through web user interface.

--- a/wiki/RuLibDaysEvent.wiki
+++ b/wiki/RuLibDaysEvent.wiki
@@ -10,7 +10,7 @@
 
 == Системные события ==
 
-*system.ready* - событие наступает сразу после чтения конфигурационного файла, до начала работы ядра фреймворка. Подписаться на это событие можно, создав файл в app/autorun c вызовом Days_Event::add, параметр engine/enable_autorun должен быть равен 1.
+*system.ready* - событие наступает сразу после чтения конфигурационного файла, до начала работы ядра фреймворка. Подписаться на это событие можно, создав файл в app/autorun вашего приложения c вызовом Days_Event::add, параметр engine/autorun должен быть равен 1.
 
 *system.pre_controller* - событие, отрабатывающее сразу после определения какой контроллер нужно выполнять.
 
