Edited wiki page through web user interface.

--- a/wiki/Tr.wiki
+++ b/wiki/Tr.wiki
@@ -3,7 +3,7 @@
 
 *phpDays* - flexible php5 framework based on the [EnMvc MVC] and [EnLibDaysDbTable ORM] design patterns.
 
-=== [En] » Start now ===
+=== [Tr] » Şimdi başlayın ===
 
  * [EnAbout About] the project _(features)_
  * [EnChangelog Changelog] _(changes between project versions)_
@@ -13,30 +13,17 @@
  * [EnAnswers Answers] to your questions
  * [http://code.google.com/p/phpdays/w/list?q=label:Lang-En All pages] in English
 
-=== Every day use ===
+=== Günlük kullanım ===
 
  * [EnMvc MVC] - basic concepts necessary to work with the framework
  * [EnLib Library] class reference descriptions
  * [EnAjax Ajax] support in your applications
  * [EnMultisite Multisite] - manage many sites from one framework installation
 
-=== For project members ===
+=== Proje üyeleri için ===
 
  * [EnCoding Entry] in the development team
  * [EnCodingStyle Coding style] _(syntax standards of php, html, css, js and yaml files)_
  * [EnCodingApp Improve application] base in framework
  * [EnIdea Ideas] for improve project
  * [EnDoc Documentation] create _(wiki page syntax, page names, translations)_
-
-
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
