--- a/wiki/RuChangelog.wiki
+++ b/wiki/RuChangelog.wiki
@@ -4,33 +4,37 @@
 
 == Список изменений в версии 1.1 ==
 
-=== 1.1 beta2 ===
+=== 1.1 beta3 ===
 
- * Создана структура приложения phpdays.org, оформлен внешний вид.
- * Добавлен класс [RuLibDaysEvent Days_Event], реализующий паттерн Observer(Наблюдатель).
- * Добавлены модульные тесты для классов Days_View`_*` и Days_Event
- * r59 *engine* Удалено автоматическое преобразование данных в формат JSON для Ajax запросов.
- * r193 Fix bug in Templum: throw exception if template contein php tags.
- * r200 Change url from sf.net to googlecode.com.
- * r247 Create Days_Tool_AppGenerator. Change @package and @subpackage in all Days classes.
- * r255 Add class Days_Router. Add methods "copy" and "rename" to Days_Db_Table.
- * r262, r275 Refactor View classes. Add empty helpers base.
- * r263 Extend helper classes by Days_Helper_Abstract.
- * r266 Fix #22: Extract Days_Exception from Engine.php
- * r267 Added methods Days_Response::getContent and Days_Response::setContent for comfort and control output of the engine
- * r268 Added method Days_Event:: get($event) for all subscribers of certain event.
- * r282 First Helpers
- * r283 [lib/Templum] Create new Pages function.
- * r284 [lib/Templum] Create new Collect block.
- * r285 [lib/Templum] Add new tests in template.
+ * нет изменений
+
+=== 1.1 beta2 ^(15 ноября 2009)^ ===
+
+ * Создана структура приложения phpdays.org, оформлен внешний вид
+ * Добавлен класс [RuLibDaysEvent Days_Event], реализующий паттерн Observer (Наблюдатель)
+ * Добавлены модульные тесты для классов `Days_View_*` и [RuLibDaysEvent Days_Event]
+ * r59 [RuLibDaysEngine Days_Engine] Удалено автоматическое преобразование данных в формат JSON для Ajax запросов
+ * r193 Fix bug in Templum: throw exception if template contein php tags
+ * r200 Change url from sf.net to googlecode.com
+ * r247 Create [RuLibDaysToolAppGenerator Days_Tool_AppGenerator]. Change `@package` and `@subpackage` in all Days classes
+ * r255 Add class [RuLibDaysRouter Days_Router]. Add methods "copy" and "rename" to [RuLibDaysDbTable Days_Db_Table]
+ * r262, r275 Refactor [RuLibDaysView View] classes. Add empty helpers base
+ * r263 Extend helper classes by [RuLibDaysHelperAbstract Days_Helper_Abstract]
+ * r266 Fix #22: Extract [RuLibDaysException Days_Exception] from `Engine.php`
+ * r267 Added methods [RuLibDaysResponse Days_Response]::getContent and [RuLibDaysResponse Days_Response]::setContent for comfort and control output of the engine
+ * r268 Added method [RuLibDaysEvent Days_Event]:: get($event) for all subscribers of certain event
+ * r282 Added first [RuLibDaysHelper Helpers]
+ * r283 `[lib/Templum]` Create new Pages function
+ * r284 `[lib/Templum]` Create new Collect block
+ * r285 `[lib/Templum]` Add new tests in template
  * r288 Creating a branch for Issue #24
- * r290 [apps/phpdays.org] Change menu links.
- * r291 [apps/phpdays.org] Rename service "dev" to "lab".
+ * r290 `[apps/phpdays.org]` Change menu links
+ * r291 `[apps/phpdays.org]` Rename service "dev" to "lab"
 
 === 1.1 beta1 ^(18 октября 2009)^ ===
 
  * r19-r20 Добавлена поддержка [http://templum.googlecode.com шаблонизатора Templum].
- * `apps/new`: Fix css text-align (created by yui library).
+ * `apps/new` Fix css text-align (created by yui library).
  * Changes in apps/new: added jquery library, added yui css reset, changed index layout.
  * Fix bug in application "phpdays.org" in tag script.
  * Add Smarty plugin block for show block template by name.
