Set link to Observer. Small fixes.

--- a/wiki/RuLibDaysEvent.wiki
+++ b/wiki/RuLibDaysEvent.wiki
@@ -4,11 +4,11 @@
 
 == Общие сведения ==
 
-Класс [http://code.google.com/p/phpdays/source/browse/trunk/lib/Days/Event.php Days_Event] реализует паттерн Observer, позволяет подписаться (назначить вызов функции) на определенное событие, оповещать (вызывать назначенные функции) при наступлении событий. Подписчиков на одно событие может быть несколько, оповещаются они по порядку подписки.
+Класс [http://code.google.com/p/phpdays/source/browse/trunk/lib/Days/Event.php Days_Event] реализует шаблон проектирования [http://ru.wikipedia.org/wiki/Наблюдатель_(шаблон_проектирования) Observer]. Позволяет подписаться на определенное событие и производить оповещение подписчиков при наступлении этих событий. На одно событие может быть подписано несколько слушателей и каждый из них будет оповещен о наступлении события.
 
 События бывают системными и пользовательскими.
 
-== Системные события ==
+=== Системные события ===
 
 *engine.start* - событие наступает сразу после чтения конфигурационного файла, до начала работы ядра фреймворка.
 
@@ -24,34 +24,32 @@
 
 *response.send.content* - событие перед отправкой контента страницы.
 
-Подписаться на ранние события ядра можно, создав файл app/Controller/System/Autorun.php с классом App_Controller_System_Autorun, где App - префикс вашего приложения.
+Подписаться на ранние события ядра можно, создав файл `app/Controller/System/Autorun.php` с классом `App_Controller_System_Autorun`, где App - префикс вашего приложения.
 {{{
-class Phpdays_Controller_System_Autorun {
-
+class App_Controller_System_Autorun {
     /**
      * Defines a list of subscribers to the event
      */
     public static function run() {
-        Days_Event::add('engine.start','session_start');
+        Days_Event::add('engine.start', 'session_start');
     }
 }
 }}}
-В статическом методе run() класса указываем вызовы Days_Event::add и остальной код, который необходимо выполнить сразу после инициализации ядра фреймворка. Параметр engine/autorun в конфигурационном файле приложения должен быть равен 1.
 
-=== Пример ===
+В статическом методе `run()` указываем вызовы `Days_Event::add()` и остальной код, который необходимо выполнить сразу после инициализации ядра фреймворка. Параметр `engine/autorun` в [RuLibDaysConfig конфигурационном файле] приложения должен быть равен `true`.
+
+==== Пример ====
 
 Подписка на событие *engine.end*
-
 {{{
-Days_Event::add('engine.end','Days_Log::save');
+Days_Event::add('engine.end', array('Days_Log', 'save'));
 }}}
 
+=== Пользовательские события ===
 
-== Пользовательские события ==
+В своем приложении Вы можете определять произвольные события. При этом ответственность за оповещение подписчиков о наступлении пользовательских событий ложиться на приложение. Для таких событиях перед названием события указываем префикс приложения.
 
-В своем приложении вы можете определять произвольные события. При этом ответственность за оповещение подписчиков о наступлении пользовательских событий ложиться на приложение. В таких событиях перед названием события указываем префикс приложения.
-
-=== Примеры ===
+==== Примеры ====
 
 1) События в классе [RuLibDaysUser Days_User] фреймворка
 {{{
@@ -74,34 +72,35 @@ class Days_User {
 
 2) Пользовательские события в приложении
 {{{
-class Myapp_Model_Rss {
+class App_Model_Rss {
   public function import($path) {
-    Days_Event::run('myapp.rss.import.before');
+    Days_Event::run('app.rss.import.before');
     // process loginning
     if (/* data loaded from RSS */) {
-      Days_Event::run('myapp.rss.import.success');
+      Days_Event::run('app.rss.import.success');
       ...
     }
     else {
-      Days_Event::run('myapp.rss.import.fail');
+      Days_Event::run('app.rss.import.fail');
       ...
     }
-    Days_Event::run('myapp.rss.import.after');
+    Days_Event::run('app.rss.import.after');
   }
 }
 }}}
 
 3) Подписка на пользовательские события в приложении
 {{{
-// general Days event
+// основное событие Days
 Days_Event::add('user.login.success', 'userSuccessLogged');
-// function called on success logging
+// функция вызывается при успешном входе пользователя на сайт
 function userSuccessLogged() {
   echo 'You logged successfully on site!';
 }
-// your application event
+
+// событие Вашего приложения
 Days_Event::add('myapp.rss.import.fail', 'rssNotLoaded');
-// callback function
+// callback функция (функция обратного вызова)
 function rssNotLoaded() {
   echo 'RSS not loaded. Enter correct URL adress';
 }
