--- a/wiki/EnLibDaysEvent.wiki
+++ b/wiki/EnLibDaysEvent.wiki
@@ -1,13 +1,14 @@
 #summary Implementation of the Observer Design Pattern
+#labels Lang-En
 #sidebar EnLib
 
 == Overview ==
 
-The [http://code.google.com/p/phpdays/source/browse/trunk/lib/Days/Event.php Days_Event] class implements the Observer pattern, it allows you to subscribe (assign a callback function) to a specific event and notify (call assigned callback functions) when the event occurs. There can be several subscribers to a single event, they are notified in the order of subscription.
+The [http://code.google.com/p/phpdays/source/browse/trunk/lib/Days/Event.php Days_Event] class implements an [http://en.wikipedia.org/wiki/Observer_pattern Observer] design pattern. It allows to subscribe to a specific event and be notified upon the occurrence of the event. One event can have several listeners and each one of them will be notified when the event occurs.
 
 Events can be system or user events.
 
-== System Events ==
+=== System Events ===
 
 *engine.start* - this event occurs immediately after reading the configuration file, prior to the framework core's start up.
 
@@ -23,42 +24,40 @@ Events can be system or user events.
 
 *response.send.content* - this event occurs before sending the page's content.
 
-You can subscribe to the earlier system events by creating a app/Controller/System/Autorun.php file with a App_Controller_System_Autorun class, where App is a prefix of your application.
+You can subscribe to the earlier system events by creating a `app/Controller/System/Autorun.php` file with a `App_Controller_System_Autorun class`, where App is a prefix of your application.
 {{{
 class App_Controller_System_Autorun {
-
     / **
      * Defines a list of subscribers to the event
-     * /
+     */
     public static function run() {
-        Days_Event::add('engine.start', 'session_start')
+        Days_Event::add('engine.start', 'session_start');
     }
 }
 }}}
-The static method run() contains a call to Days_Event::add and the rest of the code that must be executed immediately after the framework core's initialization. The engine/autorun parameter in the application's configuration file must be set to 1.
 
-=== Example ===
+In the static method `run()`, call `Days_Event::add` and the rest of the code that must be executed immediately after the framework's core initialization. The `engine/autorun` parameter in the application's [EnLibDaysConfig configuration file] must be equal to `true`.
 
-Subscribe to the *engine.end* event
+==== An Example ====
 
+Subscribing to the *engine.end* event
 {{{
-Days_Event::add('engine.end','Days_Log::save');
+Days_Event:: add('engine.end', array('Days_Log', 'save'));
 }}}
 
+=== User Events ===
 
-== User Events ==
+In your application, you can define your own custom events. In this case, your application is responsible for notifying subscribers when a custom event occurs. Start names of the custom events with your application's prefix.
 
-In your application, you can define your own custom events. In this case your application is responsible for notifying subscribers when the custom events occur. Start names of the custom events with your application's prefix.
-
-=== Examples ===
+==== Examples ====
 
 1) Events from the framework's [EnLibDaysUser Days_User] class
 {{{
 class Days_User {
   public function login($username, $password) {
     Days_Event::run('user.login.before');
-    / / Process logging
-    if (/ * logged well * /) {
+    // Process logging
+    if (/* logged well */) {
       Days_Event::run('user.login.success');
       ...
     }
@@ -73,34 +72,35 @@ class Days_User {
 
 2) A custom event in the annex
 {{{
-class Myapp_Model_Rss {
+class App_Model_Rss {
   public function import($path) {
-    Days_Event::run('myapp.rss.import.before');
-    / / Process logging
-    if (/ * data loaded from RSS * /) {
-      Days_Event::run('myapp.rss.import.success');
+    Days_Event::run('app.rss.import.before');
+    // Process logging
+    if (/* data loaded from RSS */) {
+      Days_Event::run('app.rss.import.success');
       ...
     }
     else {
-      Days_Event::run('myapp.rss.import.fail');
+      Days_Event::run('app.rss.import.fail');
       ...
     }
-    Days_Event::run('myapp.rss.import.after');
+    Days_Event::run('app.rss.import.after');
   }
 }
 }}}
 
-3) Subscribe to user events in the annex
+3) Subscribing to user events in the annex
 {{{
-/ / General Days event
+// Main Event Days
 Days_Event::add('user.login.success','userSuccessLogged');
-/ / Function called on success logging
+// Function called when the user logs on to a successful site
 function userSuccessLogged() {
   echo 'You logged successfully on site!';
-}
-/ / Your application event
+
+
+// Event of your application
 Days_Event::add('myapp.rss.import.fail', 'rssNotLoaded');
-/ / Callback function
+// Callback function (callback)
 function rssNotLoaded() {
   echo 'RSS not loaded. Enter correct URL adress';
 }
