--- a/wiki/EnIdea.wiki
+++ b/wiki/EnIdea.wiki
@@ -4,6 +4,25 @@
 
 On this page we discuss new ideas for phpDays. Post your ideas below in comments.
 
+=== Models with data checking ===
+
+I leran Python language and it's Jango framework. Also I learn about Google Engine.
+
+I very like it's models. We not create database and not describe database in files. We create model classes with fields description. after start our appplicaion generate database structure and use it. Very simple for use!
+
+For example, create model classes:
+{{{
+class App_Model_User extends Days_Model {
+  protected $_id = self::intField()->positive();
+  protected $_name = self::stringField()->maxLen(200);
+  protected $_age = self::intField()->max(70)->mix(18);
+}
+}}}
+
+Base class `Days_Model` implement base methods for different field types.
+
+Also database structure generated from this files (using reflaction).
+
 === Validator ===
 
 [EnLibDaysValidate Days_Validate] - check a variable by criteria and return `true` only if its value is valid.
