--- a/wiki/EnIdea.wiki
+++ b/wiki/EnIdea.wiki
@@ -1,16 +1,17 @@
 #summary Ideas for improving the project.
 #labels Lang-En
 #sidebar En
+<wiki:comment>revision: 1 </wiki:comment>
 
 On this page we discuss new ideas for phpDays. Post your ideas below in comments.
 
 === Models with data checking ===
 
-I leran Python language and it's Jango framework. Also I learn about Google Engine.
+I am learning the  Python language and its Django framework. I am also learning about the Google App Engine.
 
-I very like it's models. We not create database and not describe database in files. We create model classes with fields description. after start our appplicaion generate database structure and use it. Very simple for use!
+I like its models very much. We do nott create a database and do not describe a database in files. We create model classes with field descriptions. At launch, our application generates a database structure and then uses it. Very simple to use!
 
-For example, create model classes:
+For example, to create a model class:
 {{{
 class App_Model_User extends Days_Model {
   protected $_id = self::intField()->positive();
@@ -19,9 +20,9 @@ class App_Model_User extends Days_Model {
 }
 }}}
 
-Base class `Days_Model` implement base methods for different field types.
+The base class `Days_Model` implements base methods for different field types.
 
-Also database structure generated from this files (using reflaction).
+Also the database structure is generated from this file (using reflection).
 
 === Validator ===
 
