--- a/wiki/EnLib.wiki
+++ b/wiki/EnLib.wiki
@@ -1,6 +1,7 @@
 #summary phpDays library.
 #labels Lang-En
 #sidebar En
+<wiki:comment>revision: 1</wiki:comment>
 
 === [EnLib] » System engine ===
 
