--- a/wiki/EnChangelog.wiki
+++ b/wiki/EnChangelog.wiki
@@ -1,6 +1,7 @@
 #summary List of changes in versions.
 #labels Lang-En
 #sidebar En
+<wiki:comment>revision: 1</wiki:comment>
 
 == List of changes in version 1.1 ==
 
